client/src/css/app.sass
// app global css in Sass form
@font-face
    font-family: "Atkinson"
    src: url(./fonts/Atkinson_Hyperlegible/AtkinsonHyperlegible-Regular.ttf)

html
    font-family: "Atkinson"

.alert
    background-color: #eee
    border-radius: 4px
    margin: 16px 0
    padding: 16px 16px 16px 16px
    font-size: 1em
    border-width: 0 5px
    border-style: solid
    border-color: $dark-grey
    letter-spacing: 0.5px

    .alert-title
        margin: -16px -16px 16px -16px
        padding: 4px 8px
        font-weight: bold
        border-bottom: 1px solid

.alert-success
    .alert-title
        font-weight: bold

.alert-tip
    .alert-title
        font-weight: bold

fieldset
    border: none

a[target="_blank"]::after
    font-family: 'Material Icons'
    content: "open_in_new"
    font-feature-settings: 'liga'
    padding-left: 1px

.q-tab__label
    font-weight: 400

.q-item--active,
.q-item.q-router-link--active,
.q-tab--active .q-tab__label,
.q-tab--active
    font-weight: 500

.q-list.notifications-list .q-item
    .q-badge
        position: absolute
        left: 0
        top: 50%
        background: $primary
        transform: translate(-50%, -50%)
        height: 100%
        padding: 4px
        border-radius: 3px
    span
        font-weight: bold
    &.unread
        background: $blu-highlight

.q-tooltip--style
    color: #fff

.large-text-inputs
    .q-field--labeled
        .q-field__control
            height: auto

// ----------
// Light Mode
// ----------

.body--light
    .text--grey
        color: $dark-grey

    .accent
        background: $accent

    .active
        background: $active

    .alert-tip
        background-color: $active
        border-color: $active

        .alert-title
            border-color: $secondary

    .alert-success
        background-color: #c1f4c5
        border-color: $positive

        .alert-title
            border-color: $positive

    .footer-text
        color: white

        a
          color: $accent-link

    .q-page-sticky .form-actions
        background-color: $grey-1 !important

    .q-item.q-router-link--active,
    .q-item--active,
    .q-tab--active
        color: $dark
        background-color: $active

// ---------
// Dark Mode
// ---------

body.body--dark
    background: $dark !important

    a
        color: #fff

    [class*= "shadow-"]
        box-shadow: inherit

    a[data-cy="submission_link"],
    .accent-dark-text,
    .text-accent
        color: $dark-accent-text !important

    .accent,
    .accent-dark,
    .bg-accent
        background: $accent-dark !important

    .text-primary
        color: $dark-primary !important

    .footer-text a,
    button[aria-label="Jump to referenced comment"],
    .dark-accent-text
        color: $dark-accent-text !important

    aside,
    .comments,
    .header-toolbar,
    .notifications-list
        background: $dark !important

    .q-card.active .comment-header,
    .q-card.active button[data-cy="commentActions"],
    span[data-cy="comment-highlight"]
        color: $dark

    .notification-button-group,
    .notifications-container .q-card,
    .notifications-list .unread
        background: $dark-2 !important

    .comment,
    .request-resubmission,
    .comment-editor-card,
    .inline-comment-form
        background: $dark-1 !important

    .comment,
    .q-card,
    #notifications-wrapper,
    button[data-cy="submission_actions"]::before
        box-shadow: none !important

    div[contenteditable="true"],
    div[data-cy="styleCriteria"],
    .comment-header,
    .q-field__control
        background: $dark-grey !important

    .q-field--borderless
        .q-field__control
            background: none !important

    .q-field__control
        .q-icon.text-accent
            color: $dark-accent-text !important

    .q-btn.text-accent
        color: $dark-accent-text !important

    .q-field--focused
        .q-field__label
            color: $active

    .review-header,
    .comment-editor .ProseMirror p.is-editor-empty:first-child::before,
    .optional-message .ProseMirror p.is-editor-empty:first-child::before,
    .q-router-link--exact-active
        color: rgba(255, 255, 255, 0.7)
        background: $dark-grey !important

    div[data-cy="criteria-icon"] i,
    .comment-widget,
    .q-pagination__middle .q-btn[aria-current="false"],
    a.q-breadcrumbs__el.q-link,
    .q-item.q-router-link--active,
    .criteria-card .q-item__section--side .q-icon,
    .user-stats,
    .q-field--highlight
        color: $dark-primary !important

    .unread .q-badge,
    .notification_indicator,
    .q-pagination__middle .q-btn[aria-current="true"]
        background: $dark-primary !important

    .header-nav,
    footer
        background: $dark-secondary

    .q-icon.q-expansion-item__toggle-icon,
    .submission-content p:before
        color: $light-grey !important

    .q-card.active
        border: 1px solid $highlight

    .profile-keywords
        border: none

    button[data-cy="commentActions"],
    .q-btn-group .q-btn-item,
    .footer-text,
    span.q-breadcrumbs__el.q-link,
    .q-router-link--exact-active div
        color: #fff !important

    .q-page-sticky .form-actions
        background-color: $dark-2 !important

    .q-dialog__inner > .q-card
        border: 2px solid $active

    .alert
        background: inherit
        .q-icon
            color: $dark-primary !important
        .q-icon.text-red
            color: $negative !important

@media (prefers-reduced-motion)
    *
        transition: none !important

// --------------------
// Custom Color Classes
// --------------------

.text-dark-grey
    color: $dark-grey
.bg-dark-grey
    background: $dark-grey

.text-blu-highlight
    color: $blu-highlight
.bg-blu-highlight
    background: $blu-highlight

.text-highlight
    color: $highlight
.bg-highlight
    background: $highlight

.text-xlight-grey
    color: $xlight-grey
.bg-xlight-grey
    background: $xlight-grey

.text-light-grey
    color: $light-grey
.bg-light-grey
    background: $light-grey

.text-dark-6
    color: $dark-6 !important
.bg-dark-6
    background: $dark-6 !important

